2011-03-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/parse.py:
	  Fix the case for parsing 1W.
	* python/mushin/test/test_common_parse.py (added):
	  Add a test for it.

2011-03-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Add a 'delay' command to delay tasks.
	* python/mushin/common/format.py:
	  Add a formatTime method.
	* python/mushin/common/parse.py:
	  Extract method to parse a time spec.

2011-02-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	* python/mushin/command/conflict.py (added):
	* couchdb/views/conflict (added):
	* couchdb/views/conflict/map.js (added):
	  Add gtd conflict list, which at least shows the things that
	  currently are in conflict.

2011-01-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  Fix setting start date when adding a task.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/things.py:
	  Also list statutes in Things list.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/main.py:
	* python/mushin/maemo/start.py:
	  Add a New menu item to all menu's.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/start.py:
	  Load and show all thing info before populating, now that we don't
	  allow actually updating/adding until populated.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  When completing a recurring task, first fill in task from current
	  UI so we don't overwrite title or others.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  When adding a recurring task, set started to now if not set,
	  and set due to something appropriate past started.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>
